@@ -1,6 +1,8 @@
 pkglib_LTLIBRARIES = HwPerturbativeDecay.la HwTopDecay.la
 HwPerturbativeDecay_la_SOURCES = \
- SMWZDecayer.cc  SMWZDecayer.fh  SMWZDecayer.h  SMWZDecayer.icc
+ SMWZDecayer.cc  SMWZDecayer.fh  SMWZDecayer.h  SMWZDecayer.icc\
+ SMHiggsFermionsDecayer.cc  SMHiggsFermionsDecayer.fh  \
+ SMHiggsFermionsDecayer.h  SMHiggsFermionsDecayer.icc
 HwPerturbativeDecay_la_LDFLAGS = -module
 
 HwTopDecay_la_SOURCES = SMTopDecayer.cc SMTopDecayer.fh SMTopDecayer.h \
