@@ -1,0 +1,18 @@
+// -*- C++ -*-
+//
+// This is the forward declaration of the SMHiggsFermionsDecayer class.
+//
+#ifndef HERWIG_SMHiggsFermionsDecayer_FH
+#define HERWIG_SMHiggsFermionsDecayer_FH
+
+#include "ThePEG/Config/Pointers.h"
+
+namespace Herwig {
+using namespace ThePEG;
+
+class SMHiggsFermionsDecayer;
+ThePEG_DECLARE_POINTERS(SMHiggsFermionsDecayer,SMHiggsFermionsDecayerPtr);
+
+}
+
+#endif
