@@ -1,0 +1,64 @@
+// -*- C++ -*-
+//
+// This is the implementation of the inlined member functions of
+// the SMHiggsFermionsDecayer class.
+//
+
+namespace Herwig {
+
+inline SMHiggsFermionsDecayer::SMHiggsFermionsDecayer() 
+{
+  _maxwgt.resize(9);
+}
+
+inline SMHiggsFermionsDecayer::SMHiggsFermionsDecayer(const SMHiggsFermionsDecayer & x)
+  : DecayIntegrator(x),_hvertex(x._hvertex),_maxwgt(x._maxwgt) 
+{}
+
+inline IBPtr SMHiggsFermionsDecayer::clone() const {
+  return new_ptr(*this);
+}
+
+inline IBPtr SMHiggsFermionsDecayer::fullclone() const {
+  return new_ptr(*this);
+}
+
+inline void SMHiggsFermionsDecayer::doupdate() throw(UpdateException) {
+  DecayIntegrator::doupdate();
+  // First update base class.
+  bool redo = touched();
+  // redo if touched.
+//  UpdateChecker::check(aDependentMember, redo);
+  // Update referenced objects on which this depends redo is set to true
+  // if the dependent object is touched.
+//  for_each(ContainerOfDependencies, UpdateChecker(redo));
+  // Update a container of references.
+//  for_each(MapOfDependencies, UpdateMapChecker(redo));
+  // Update a map of references.
+  if ( !redo ) return;
+  // return if nothing has been touched. Otherwise do the actual update.
+//  touch()
+  // Touch if anything has changed.
+}
+
+inline void SMHiggsFermionsDecayer::dofinish() {
+  DecayIntegrator::dofinish();
+}
+
+inline void SMHiggsFermionsDecayer::doinitrun() {
+  DecayIntegrator::doinitrun();
+}
+
+inline void SMHiggsFermionsDecayer::rebind(const TranslationMap & trans)
+  throw(RebindException) {
+  // dummy = trans.translate(dummy);
+  DecayIntegrator::rebind(trans);
+}
+
+inline IVector SMHiggsFermionsDecayer::getReferences() {
+  IVector ret = DecayIntegrator::getReferences();
+  // ret.push_back(dummy);
+  return ret;
+}
+
+}
