@@ -1,5 +1,7 @@
 2005-10-19  Pete's account  <Peter.Richardson@durham.ac.uk>
 
+	* Decay/Perturbative/SMWZDecayer.h (Repository): added decayer for H -> f fbar
+
 	* Helicity/Vertex/Scalar/Makefile.am (Repository): changes to include .fh file for FFSVertex
 
 2005-10-07  Martyn Gigg  <m.a.gigg@dur.ac.uk>
